--- a/views/sites/edit.ejs
+++ b/views/sites/edit.ejs
@@ -1,41 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Edit tourist site</title>
-	</head>
-	<body>
-		<h1>Edit site submission</h1>
+<% layout('/partials/boilerplate') %>
+<h1>Edit site submission</h1>
 
-		<form action="/sites/<%=site._id%>?_method=PUT" method="POST">
-			<div>
-				<label for="">Title</label>
-				<input
-					type="text"
-					name="site[name]"
-					id="site"
-					value="<%=site.name%>"
-				/>
-			</div>
-			<div>
-				<label for="">Location</label>
-				<input
-					type="text"
-					name="site[location]"
-					id="location"
-					value="<%=site.location%>"
-				/>
-			</div>
-			<button>Update site</button>
-		</form>
+<form action="/sites/<%=site._id%>?_method=PUT" method="POST">
+	<div>
+		<label for="">Title</label>
+		<input type="text" name="site[name]" id="site" value="<%=site.name%>" />
+	</div>
+	<div>
+		<label for="">Location</label>
+		<input
+			type="text"
+			name="site[location]"
+			id="location"
+			value="<%=site.location%>"
+		/>
+	</div>
+	<button>Update site</button>
+</form>
 
-		<br />
-		<form action="/sites/<%=site._id%>?_method=DELETE" method="POST">
-			<button>Delete site</button>
-		</form>
+<br />
+<form action="/sites/<%=site._id%>?_method=DELETE" method="POST">
+	<button>Delete site</button>
+</form>
 
-		<a href="/sites/<%=site._id%>">Return to site information</a>
-	</body>
-</html>
+<a href="/sites/<%=site._id%>">Return to site information</a>
