--- a/views/sites/index.ejs
+++ b/views/sites/index.ejs
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Tourist sites</title>
-	</head>
-	<body>
-		<div>
-			<a href="/sites/add">Add a new site</a>
-		</div>
-		<h1>Sites</h1>
-		<ul>
-			<% for( let site of sites) { %>
-			<li><a href="/sites/<%=site._id%>"> <%=site.name%> </a></li>
-			<% } %>
-		</ul>
-	</body>
-</html>
+<% layout('/partials/boilerplate') %>
+
+<body>
+	<div>
+		<a href="/sites/add">Add a new site</a>
+	</div>
+	<h1>Sites</h1>
+	<ul>
+		<% for( let site of sites) { %>
+		<li><a href="/sites/<%=site._id%>"> <%=site.name%> </a></li>
+		<% } %>
+	</ul>
+</body>
