--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -12,12 +12,11 @@
 		/>
 		<title></title>
 	</head>
+
 	<body class="d-flex flex-column vh-100">
 		<%- include('../partials/nav') %>
 		<main class="container mt-3">
-			<h1>Before</h1>
 			<%- body %>
-			<h1>After</h1>
 
 			<script
 				src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
@@ -28,4 +27,30 @@
 
 		<%- include('../partials/footer') %>
 	</body>
+
+	<script>
+		// Example starter JavaScript for disabling form submissions if there are invalid fields
+		(function () {
+			"use strict";
+
+			// Fetch all the forms we want to apply custom Bootstrap validation styles to
+			var forms = document.querySelectorAll(".needs-validation");
+
+			// Loop over them and prevent submission
+			Array.prototype.slice.call(forms).forEach(function (form) {
+				form.addEventListener(
+					"submit",
+					function (event) {
+						if (!form.checkValidity()) {
+							event.preventDefault();
+							event.stopPropagation();
+						}
+
+						form.classList.add("was-validated");
+					},
+					false
+				);
+			});
+		})();
+	</script>
 </html>
