--- a/views/sites/site.ejs
+++ b/views/sites/site.ejs
@@ -51,6 +51,14 @@
 <% for( let review of site.reviews) { %>
 <p>Rating: <%= review.rating %></p>
 <p>Review: <%= review.body%></p>
+
+<form
+	action="/sites/<%=site._id%>/reviews/<%=review._id%>?_method=DELETE"
+	method="post"
+>
+	<button class="btn btn-danger">Delete</button>
+</form>
+
 <% } %>
 
 <footer>
