--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -26,31 +27,7 @@
 		</main>
 
 		<%- include('../partials/footer') %>
+
+		<script src="/scripts/app.js"></script>
 	</body>
-
-	<script>
-		// Example starter JavaScript for disabling form submissions if there are invalid fields
-		(function () {
-			"use strict";
-
-			// Fetch all the forms we want to apply custom Bootstrap validation styles to
-			var forms = document.querySelectorAll(".needs-validation");
-
-			// Loop over them and prevent submission
-			Array.prototype.slice.call(forms).forEach(function (form) {
-				form.addEventListener(
-					"submit",
-					function (event) {
-						if (!form.checkValidity()) {
-							event.preventDefault();
-							event.stopPropagation();
-						}
-
-						form.classList.add("was-validated");
-					},
-					false
-				);
-			});
-		})();
-	</script>
 </html>
