add flash middleware for msg display

--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -17,7 +17,7 @@
 	<body class="d-flex flex-column vh-100">
 		<%- include('../partials/nav') %>
 		<main class="container mt-3">
-			<%- body %>
+			<%= success %> <%- body %>
 
 			<script
 				src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
