--- a/views/sites/add.ejs
+++ b/views/sites/add.ejs
@@ -1,6 +1,6 @@
 <% layout('/partials/boilerplate') %>
 
-<form action="/sites" method="POST" novalidate class="needs-validation">
+<form action="/sites" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
 	<div>
 		<label for="">Title:</label>
 		<input
@@ -57,6 +57,11 @@
 		<div class="invalid-feedback">
 			Please enter a description for the site.
 		</div>
+	</div>
+
+	<div class="mt-2">
+		<input type="file" name="image" id="" multiple="true">
+		
 	</div>
 
 	<!-- <div class="mt-2">
