implement maps API

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,27 @@
+@import "bulma/css/bulma.css";
+
 .alert {
-	width: 40%;
+	width: 100%;
+}
+
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+#map {
+	height: 50%;
+	width: 50%;
+}
+
+body {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+footer {
+	margin-top: auto;
+}
+
+.navbar {
+	margin: 0.5% 20% 0 20%;
+	font-size: 1.25em;
+	font-weight: 500;
 }
