--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,7 +19,7 @@
                     <a
                         class="nav-link active"
                         aria-current="page"
-                        href="/home"
+                        href="/"
                         >Home</a
                     >
                 </li>
