--- a/views/sites/add.ejs
+++ b/views/sites/add.ejs
@@ -24,6 +24,7 @@
 			id="location"
 			placeholder="Enter a location"
 			required
+			value=""
 		/>
 		<div class="valid-feedback">Perfect!</div>
 		<div class="invalid-feedback">Please enter a valid site location.</div>
@@ -76,5 +77,5 @@
 		<div class="invalid-feedback">Please attach an image to upload.</div>
 	</div> -->
 	<br />
-	<button type="submit" class="btn btn-success">Submit a new site</button>
+	<button type="submit" id="submit-button" class="btn btn-success">Submit a new site</button>
 </form>
