--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -5,29 +5,32 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-			crossorigin="anonymous"
-		/>
+
 		<title></title>
+
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
+		/>
+		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+		<script src="/scripts/map.js"></script>
 	</head>
 
 	<body class="d-flex flex-column vh-100">
 		<%- include('../partials/nav') %>
 		<main class="container mt-3">
 			<%= success %> <%= error %> <%- body %>
-
-			<script
-				src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-				integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-				crossorigin="anonymous"
-			></script>
 		</main>
 
 		<%- include('../partials/footer') %>
 
 		<script src="/scripts/app.js"></script>
+		<!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+		<script
+			async
+			src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.MAPS_KEY%>&callback=initMap&libraries=&v=weekly"
+		></script>
 	</body>
 </html>
